--- a/walk_forward_backtest.ipynb
+++ b/walk_forward_backtest.ipynb
@@ -327,12 +327,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "class Regression(Strategy):\n",
     "    limit_buy = 1\n",
-    "    limit_sell = -5\n",
+    "    limit_sell = -1\n",
     "    \n",
     "    n_train = 600\n",
     "    coef_retrain = 200\n",
@@ -362,15 +362,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T08:51:27.538094Z",
-     "start_time": "2023-11-28T08:51:27.536578Z"
+     "end_time": "2023-11-28T09:03:35.607702Z",
+     "start_time": "2023-11-28T09:03:35.596535Z"
     }
    },
    "id": "39c08c14e78dcd53"
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "class WalkForwardAnchored(Regression):\n",
@@ -396,8 +396,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T08:51:27.544115Z",
-     "start_time": "2023-11-28T08:51:27.539559Z"
+     "end_time": "2023-11-28T09:03:36.320183Z",
+     "start_time": "2023-11-28T09:03:36.315309Z"
     }
    },
    "id": "506a7d39a6f39cd9"
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "from backtesting import Backtest\n",
@@ -423,21 +423,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T08:51:27.544786Z",
-     "start_time": "2023-11-28T08:51:27.543031Z"
+     "end_time": "2023-11-28T09:03:38.147883Z",
+     "start_time": "2023-11-28T09:03:38.143790Z"
     }
    },
    "id": "d32b1a2845217d0c"
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
-      "text/plain": "Start                     2018-01-02 00:00:00\nEnd                       2023-11-24 00:00:00\nDuration                   2152 days 00:00:00\nExposure Time [%]                    59.52862\nEquity Final [$]                 11929.144513\nEquity Peak [$]                  12426.396606\nReturn [%]                          19.291445\nBuy & Hold Return [%]              341.123899\nReturn (Ann.) [%]                    3.038699\nVolatility (Ann.) [%]               24.479378\nSharpe Ratio                         0.124133\nSortino Ratio                        0.179971\nCalmar Ratio                         0.066163\nMax. Drawdown [%]                  -45.927329\nAvg. Drawdown [%]                   -7.244065\nMax. Drawdown Duration     1222 days 00:00:00\nAvg. Drawdown Duration      159 days 00:00:00\n# Trades                                    5\nWin Rate [%]                             60.0\nBest Trade [%]                      48.012996\nWorst Trade [%]                    -20.182661\nAvg. Trade [%]                        3.64562\nMax. Trade Duration        1187 days 00:00:00\nAvg. Trade Duration         257 days 00:00:00\nProfit Factor                        1.901939\nExpectancy [%]                       6.260877\nSQN                                  0.355775\n_strategy                 WalkForwardAnchored\n_equity_curve                             ...\n_trades                      Size  EntryBa...\ndtype: object"
+      "text/plain": "Start                     2018-01-02 00:00:00\nEnd                       2023-11-24 00:00:00\nDuration                   2152 days 00:00:00\nExposure Time [%]                    59.52862\nEquity Final [$]                  6942.352582\nEquity Peak [$]                  10078.387298\nReturn [%]                         -30.576474\nBuy & Hold Return [%]              341.123899\nReturn (Ann.) [%]                   -6.005128\nVolatility (Ann.) [%]               24.899604\nSharpe Ratio                              0.0\nSortino Ratio                             0.0\nCalmar Ratio                              0.0\nMax. Drawdown [%]                  -59.788814\nAvg. Drawdown [%]                  -59.788814\nMax. Drawdown Duration     1281 days 00:00:00\nAvg. Drawdown Duration     1281 days 00:00:00\n# Trades                                   71\nWin Rate [%]                        54.929577\nBest Trade [%]                      14.117335\nWorst Trade [%]                    -38.357939\nAvg. Trade [%]                      -0.515429\nMax. Trade Duration         168 days 00:00:00\nAvg. Trade Duration          19 days 00:00:00\nProfit Factor                        0.920256\nExpectancy [%]                      -0.189369\nSQN                                 -0.618595\n_strategy                 WalkForwardAnchored\n_equity_curve                             ...\n_trades                       Size  EntryB...\ndtype: object"
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,8 +449,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T08:55:37.186158Z",
-     "start_time": "2023-11-28T08:55:33.461624Z"
+     "end_time": "2023-11-28T09:03:43.242674Z",
+     "start_time": "2023-11-28T09:03:39.684152Z"
     }
    },
    "id": "61f7db45879832b3"
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "from backtesting import Strategy\n",
@@ -543,7 +543,7 @@
     "\n",
     "class Regression(Strategy):\n",
     "    limit_buy = 1\n",
-    "    limit_sell = -5\n",
+    "    limit_sell = -1\n",
     "    \n",
     "    n_train = 600\n",
     "    coef_retrain = 200\n",
@@ -616,8 +616,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T08:52:51.912088Z",
-     "start_time": "2023-11-28T08:52:51.911668Z"
+     "end_time": "2023-11-28T09:04:06.514635Z",
+     "start_time": "2023-11-28T09:04:06.504847Z"
     }
    },
    "id": "d17eb99700f2e758"
@@ -634,10 +634,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Start                     2018-01-02 00:00:00\nEnd                       2023-11-24 00:00:00\nDuration                   2152 days 00:00:00\nExposure Time [%]                    59.52862\nEquity Final [$]                  5444.072049\nEquity Peak [$]                  10078.387298\nReturn [%]                          -45.55928\nBuy & Hold Return [%]              341.123899\nReturn (Ann.) [%]                   -9.804041\nVolatility (Ann.) [%]               23.552217\nSharpe Ratio                              0.0\nSortino Ratio                             0.0\nCalmar Ratio                              0.0\nMax. Drawdown [%]                  -56.274404\nAvg. Drawdown [%]                  -56.274404\nMax. Drawdown Duration     1281 days 00:00:00\nAvg. Drawdown Duration     1281 days 00:00:00\n# Trades                                   91\nWin Rate [%]                        50.549451\nBest Trade [%]                      13.472373\nWorst Trade [%]                    -38.357939\nAvg. Trade [%]                      -0.670525\nMax. Trade Duration         168 days 00:00:00\nAvg. Trade Duration          15 days 00:00:00\nProfit Factor                        0.791782\nExpectancy [%]                      -0.428627\nSQN                                 -0.961696\n_strategy                 WalkForwardUnanc...\n_equity_curve                             ...\n_trades                       Size  EntryB...\ndtype: object"
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bt_unanchored = Backtest(df, WalkForwardUnanchored, cash=10000, commission=.002, exclusive_orders=True)\n",
+    "stats_unanchored = bt_unanchored.run()\n",
+    "stats_unanchored\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-28T09:04:10.810964Z",
+     "start_time": "2023-11-28T09:04:08.497282Z"
+    }
+   },
+   "id": "bc6b38562e310354"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "bt_unanchored = Backtest(df, WalkForwardUnanchored, cash=10000, commission=.002, exclusive_orders=True)\n",
+    "\n",
     "\n",
     "stats_skopt, heatmap, optimize_result = bt_unanchored.optimize(\n",
     "    limit_buy = range(0, 6), limit_sell = range(-6, 0),\n",
