--- a/time_series_decomp.ipynb
+++ b/time_series_decomp.ipynb
@@ -5,7 +5,11 @@
    "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2023-12-02T16:50:38.864404Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -14,6 +18,45 @@
     "from statsmodels.tsa.seasonal import seasonal_decompose, STL\n",
     "from openbb_terminal.sdk import openbb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'openbb' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[5], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m df \u001B[38;5;241m=\u001B[39m \u001B[43mopenbb\u001B[49m\u001B[38;5;241m.\u001B[39meconomy\u001B[38;5;241m.\u001B[39munemp(\u001B[38;5;241m2010\u001B[39m)\n\u001B[1;32m      2\u001B[0m df \u001B[38;5;241m=\u001B[39m df\u001B[38;5;241m.\u001B[39mset_index(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdate\u001B[39m\u001B[38;5;124m\"\u001B[39m)[:\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m2019-12-31\u001B[39m\u001B[38;5;124m\"\u001B[39m]\u001B[38;5;241m.\u001B[39msort_index()\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'openbb' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df = openbb.economy.unemp(2010)\n",
+    "df = df.set_index(\"date\")[:\"2019-12-31\"].sort_index()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-02T16:45:39.117087Z",
+     "start_time": "2023-12-02T16:45:39.109601Z"
+    }
+   },
+   "id": "4a1fe821fcee656a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7600348d912495c1"
   }
  ],
  "metadata": {
