add code for chatboat

--- a/hugging_face/chat_bot.ipynb
+++ b/hugging_face/chat_bot.ipynb
@@ -57,20 +57,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'score': 0.916231095790863, 'start': 46, 'end': 58, 'answer': 'trading ETFs'}\n"
+     ]
+    }
+   ],
    "source": [
     "QA_input = {\n",
-    "    'question': 'Why is model conversion important?',\n",
-    "    'context': 'The option to convert models between FARM and transformers gives freedom to the user and let people easily switch between frameworks.'\n",
+    "    'question': 'What are you area of expertise?',\n",
+    "    'context': 'Your name is Jarvis, and you are an expert in trading ETFs.'\n",
     "}\n",
     "res = nlp(QA_input)\n",
     "print(res)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-13T13:42:50.694808Z",
+     "start_time": "2023-12-13T13:42:50.644912Z"
+    }
    },
    "id": "d6921dbeb0ad817d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e093478a35823f03"
   }
  ],
  "metadata": {
