add option analysis

--- a/options/strike_and_expiration.ipynb
+++ b/options/strike_and_expiration.ipynb
@@ -104,7 +104,11 @@
     "rut_chains"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2023-12-17T08:02:59.134709Z"
+    }
    },
    "id": "4d0aee50b7cd927a"
   },
@@ -117,9 +121,64 @@
     "op.short_calls(rut_chains).round(2)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    },
    "id": "aace3fdb3f32a6ab"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Let’s break down the key output:\n",
+    "\n",
+    "- dte_range: The range of days remaining until the options expire. For example, (0, 7] includes all options that will expire in 0 to 7 days based on the quote date.\n",
+    "- otm_pct_range: Range of how far out of the money the options are, expressed as a percentage. For example, (-0.5, -0.45] means the options are between 50% and 45% out of the money.\n",
+    "- count: The number of options contracts that fall within the specified dte_range and otm_pct_range. For instance, there are 666 options contracts that expire in 0 to 7 days and are 50% to 45% out of the money.\n",
+    "- mean: This is the average percent change of the options within the specified dte_range and otm_pct_range."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "672f0b23e954721b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "op.short_strangles(\n",
+    "    rut_chains, \n",
+    "    dte_interval=60, \n",
+    "    max_entry_dte=70, \n",
+    "    exit_dte=10,\n",
+    "    otm_pct_interval=0.01,\n",
+    "    max_otm_pct=0.10\n",
+    ").round(2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c450d6f4b9fa9fe3"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "There are 3,070 short strangles found between 0 and 60 days to expiration. The first leg, usually the put, groups contracts between 9% and 10% out of the money and the first leg between 3% and 4% out of the money. The mean return achieved by exiting this position at 10 days to expiration is 39%."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2dac8ef71fa7e99"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9387195fdb49b8cf"
   }
  ],
  "metadata": {
